# apriltag2

./: .cproject  .gitignore  .project  CMakeLists.txt  CMakeLists.txt.old  Eclipse.gitignore  Makefile  README.md  apriltag.c  apriltag.h  package.xml  userDefinedFunctions.h
_build/: Makefile  apriltag2.cbp
apriltag-2016-12-01/: Makefile  apriltag.h
apriltag2_example/: CMakeLists.txt  FlyCap2_to_MatImage.cpp  apriltag2_node.cpp  image_converter.h  main_test_sub.cpp  node.cpp  node.h  opencv_demo.cc  package.xml  test_subscriber.cpp
apriltag2_example/_build/: opencvDemo_exe
apriltag2_example/_build/catkin_generated/: generate_cached_setup.py  setup_cached.sh
apriltag2_example/_build/cmake/: apriltag2_example-genmsg-context.py  apriltag2_example-genmsg.cmake
apriltag2_example/_build/devel/: .catkin  .rosinstall  setup.sh
apriltag2_example/_build/devel/include/apriltag2_example/: AprilTagDetection.h  AprilTagDetectionArray.h
apriltag2_example/_build/devel/lib/pkgconfig/: apriltag2_example.pc
apriltag2_example/_build/devel/lib/python2.7/dist-packages/apriltag2_example/msg/: _AprilTagDetection.py  _AprilTagDetectionArray.py
apriltag2_example/_build/devel/share/apriltag2_example/cmake/: apriltag2_example-msg-extras.cmake  apriltag2_example-msg-paths.cmake  apriltag2_exampleConfig.cmake
apriltag2_example/_build/devel/share/common-lisp/ros/apriltag2_example/msg/: AprilTagDetection.lisp  AprilTagDetectionArray.lisp  _package.lisp  _package_AprilTagDetection.lisp  _package_AprilTagDetectionArray.lisp  apriltag2_example-msg.asd
apriltag2_example/apriltag-2016-12-01/: Makefile  Makefile_old  apriltag.h
apriltag2_example/apriltag-2016-12-01/common/: string_util.h
apriltag2_example/backup/: opencv_demo.cc
apriltag2_example/backup/src/: image_converter.cpp  test_subscriber.cpp
apriltag2_example/include/: test_subscriber.h
apriltag2_example/src/: apriltag2_pub_sub.cpp  image_converter.h  names.cpp  names.h  node.cpp  node.h  test_subscriber.cpp
apriltag2_ros/: CMakeLists.txt  package.xml
apriltag2_ros/_build/catkin_generated/: apriltag2_ros-msg-extras.cmake.develspace.in  apriltag2_ros-msg-extras.cmake.installspace.in  generate_cached_setup.py  ordered_paths.cmake  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
apriltag2_ros/_build/catkin_generated/installspace/: apriltag2_ros-msg-paths.cmake  apriltag2_ros.pc  apriltag2_rosConfig.cmake
apriltag2_ros/_build/cmake/: apriltag2_ros-genmsg-context.py  apriltag2_ros-genmsg.cmake
apriltag2_ros/_build/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
apriltag2_ros/_build/devel/lib/pkgconfig/: apriltag2_ros.pc
apriltag2_ros/_build/devel/share/apriltag2_ros/cmake/: apriltag2_ros-msg-paths.cmake  apriltag2_rosConfig.cmake
apriltag2_ros/include/apriltag2_ros/: apriltag_detector.h
apriltag2_ros/src/: apriltag2_detector.cpp  apriltag2_detector_node.cpp
common/: getopt.c  homography.c
example/: CMakeLists.txt  Makefile  apriltag_demo  debug_decision.pnm  debug_lines.ps  debug_output.ps  debug_preprocess.pnm  debug_quads.ps  debug_quads_fixed.pnm  debug_quads_raw.pnm  debug_segmentation.pnm  debug_threshold.pnm  opencv_demo  opencv_demo.cc
example/_build/: Makefile  opencvDemo  opencv_apriltag2_flea.cbp
src/: apriltag2_pub_sub.cpp  names.h  node.cpp  node.h
